force-app/main/default/objects/WorkOrderLineItem/fields/Behaviour__c.field-meta.xml
<CustomField>
    <fullName>Behaviour__c</fullName>
    <description>Trigger behaviour that caused the prevention.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Behaviour</label>
    <length>255</length>
    <type>Text</type>
</CustomField>