force-app/main/default/objects/WorkOrderLineItem/fields/Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Delivery Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>