force-app/main/default/objects/WorkOrderLineItem/fields/Documents_to_be_generated__c.field-meta.xml
<CustomField>
    <fullName>Documents_to_be_generated__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Documents to be generated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>