force-app/main/default/objects/WorkOrderLineItem/fields/Handover_Type__c.field-meta.xml
<CustomField>
    <fullName>Handover_Type__c</fullName>
    <label>Handover Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onsite</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Amend</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Manually Generated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>