force-app/main/default/objects/WorkOrderLineItem/fields/IsButton__c.field-meta.xml
<CustomField>
    <fullName>IsButton__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsButton</label>
    <type>Checkbox</type>
</CustomField>