force-app/main/default/objects/WorkOrderLineItem/fields/Issued_By__c.field-meta.xml
<CustomField>
    <fullName>Issued_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who created the Work Order.</description>
    <label>Issued By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>