force-app/main/default/objects/WorkOrderLineItem/fields/Issuing_Property__c.field-meta.xml
<CustomField>
    <fullName>Issuing_Property__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Issuing Property</label>
    <length>255</length>
    <type>Text</type>
</CustomField>