force-app/main/default/objects/WorkOrderLineItem/fields/Line_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Type__c</fullName>
    <description>Describes sub-action.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Line Item Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>