force-app/main/default/objects/WorkOrderLineItem/fields/POE_Length__c.field-meta.xml
<CustomField>
    <fullName>POE_Length__c</fullName>
    <description>Duration related to the prevention.</description>
    <label>POE Length</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>24h</fullName>
            </value>
            <value>
                <fullName>7d</fullName>
            </value>
            <value>
                <fullName>3m</fullName>
            </value>
            <value>
                <fullName>6m</fullName>
            </value>
            <value>
                <fullName>1y</fullName>
            </value>
            <value>
                <fullName>2y</fullName>
            </value>
            <value>
                <fullName>3y</fullName>
            </value>
            <value>
                <fullName>4y</fullName>
            </value>
            <value>
                <fullName>5y</fullName>
            </value>
            <value>
                <fullName>Indefinite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>