force-app/main/default/objects/WorkOrderLineItem/fields/POE_Type__c.field-meta.xml
<CustomField>
    <fullName>POE_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>POE Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>