force-app/main/default/objects/WorkOrderLineItem/fields/POE_Under__c.field-meta.xml
<CustomField>
    <fullName>POE_Under__c</fullName>
    <description>Regulation under which the Work Order is initiated.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>POE Under</label>
    <length>255</length>
    <type>Text</type>
</CustomField>