force-app/main/default/objects/WorkOrderLineItem/fields/Revocation_Date__c.field-meta.xml
<CustomField>
    <fullName>Revocation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Revocation Date</label>
    <type>Date</type>
</CustomField>