force-app/main/default/objects/WorkOrderLineItem/fields/Revocation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Revocation_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Revocation Reason</label>
    <length>200</length>
    <type>Text</type>
</CustomField>