force-app/main/default/objects/WorkOrderLineItem/fields/Revocation_Reason_Other__c.field-meta.xml
<CustomField>
    <fullName>Revocation_Reason_Other__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Revocation Reason Other</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>