force-app/main/default/objects/WorkOrderLineItem/fields/Revocation_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>Revocation_Reminder_Date__c</fullName>
    <description>Reminder trigger for upcoming revocation window.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Revocation Reminder Date</label>
    <type>Date</type>
</CustomField>