force-app/main/default/objects/WorkOrderLineItem/fields/Revoked_By__c.field-meta.xml
<CustomField>
    <fullName>Revoked_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revoked By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RevokedWOLI</relationshipName>
    <type>Lookup</type>
</CustomField>