force-app/main/default/objects/WorkOrderLineItem/fields/StartReplicatedState__c.field-meta.xml
<CustomField>
    <fullName>StartReplicatedState__c</fullName>
    <defaultValue>false</defaultValue>
    <label>StartReplicatedState</label>
    <type>Checkbox</type>
</CustomField>