force-app/main/default/objects/WorkOrderLineItem/fields/To_Be_Mailed__c.field-meta.xml
<CustomField>
    <fullName>To_Be_Mailed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>To Be Mailed</label>
    <type>Checkbox</type>
</CustomField>