force-app/main/default/objects/WorkOrderLineItem/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tracking Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>