force-app/main/default/objects/WorkOrderLineItem/fields/Witness__c.field-meta.xml
<CustomField>
    <fullName>Witness__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Assigned witness for verification.</description>
    <label>Witness</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Id</field>
            <operation>notEqual</operation>
            <valueField>$Source.Issued_By__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Order_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>